# vscode-python-manifest-template

./: .gitignore  .vscodeignore  README.md  language-configuration.json  package.json
assets/: MANIFEST.in
assets/src/: icon.sketch
example/: LICENSE.txt  MANIFEST.in  README.rst  setup.cfg  setup.py
example/docs/: conf.py
example/src/mypkg/: __init__.py
snippets/: python-manifest-template.tmSnippets.json
syntaxes/: python-manifest-template.tmLanguage.json
