[metadata]
name = mypkg
author = Ben Spaulding
description = Just an example
license = BSD-3-Clause
long_description = file: README.rst LICENSE.txt
version = 0.1.0
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Utilities
